--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "name": "Tab Decay",
   "description": "A Chrome extension which bookmarks and closes tabs that have been unused for days.",
   "version": "1.0",
-  
+
   "options_page": "options.html",
 
   "permissions": [
@@ -25,5 +25,17 @@
       "dt_webservice.js",
       "background.js"
     ]
+  },
+
+  "icons": { "128": "icon38.png", "48": "icon38.png", "16": "icon19.png" },
+
+  "browser_action": {
+    "default_icon": {
+      "19": "icon19.png",
+      "38": "icon38.png"
+    },
+
+    "default_title": "Tab Decay",
+    "default_popup": "popup.html"
   }
 }
