--- a/manifest.json
+++ b/manifest.json
@@ -18,6 +18,7 @@
   "background": {
     "scripts": [
       "sha1-min.js",
+      "sjcl.js",
       "decaying_tab.js",
       "dt_base.js",
       "dt_boot.js",
@@ -25,6 +26,7 @@
       "dt_bookmarks.js",
       "dt_webservice.js",
       "dt_debug.js",
+      "dt_encryption.js",
       "background.js"
     ]
   },
