decryption is working. as is archiving on-demand with encryption of page source

--- a/manifest.json
+++ b/manifest.json
@@ -32,8 +32,9 @@
   },
   "content_scripts": [
     {
-      "matches": ["http://*/", "https://*/"],
-      "js": ["content.js"]
+      "matches": ["http://*/*", "https://*/*"],
+      "js": ["content.js"],
+      "run_at" : "document_end"
     }
   ],
 
